# Ombra

./: CHANGES.md  LICENSE  README.md  Test.hs  ghcjs-rts-bug.patch  ombra.cabal
01/: all.js  lib.js  out.js  out.stats  rts.js
02/: all.js  lib.js  out.js  out.stats
03/: all.js  out.js  out.stats
04/: all.js  lib.js  out.js  out.stats
05/: all.js  index.html  out.js  out.stats
06/: all.js  lib.js  out.js  out.stats  rts.js
Data/: Ant.hs
Graphics/Rendering/: Ombra.hs
Graphics/Rendering/Ombra/: Backend.hs  Blend.hs  Color.hs  Culling.hs  D2.hs  D3.hs  Draw.hs  Generic.hs  Geometry.hs  Image.hs  Layer.hs  Object.hs  OutBuffer.hs  Screen.hs  Shader.hs  Shapes.hs  Stencil.hs  Stream.hs  Texture.hs  Transformation.hs  Types.hs  Vector.hs
Graphics/Rendering/Ombra/Backend/: GLFW.hs  OpenGL.hs  WebGL.hs
Graphics/Rendering/Ombra/Backend/OpenGL/: GLES.hs
Graphics/Rendering/Ombra/Backend/WebGL/: Const.hs  Raw.hs  Types.hs
Graphics/Rendering/Ombra/Blend/: Draw.hs  Internal.hs  Types.hs
Graphics/Rendering/Ombra/Culling/: Draw.hs  Types.hs
Graphics/Rendering/Ombra/Draw/: Class.hs  Internal.hs  Mode.hs  Monad.hs  Set.hs  State.hs
Graphics/Rendering/Ombra/Geometry/: Draw.hs  Internal.hs  OBJ.hs  Types.hs
Graphics/Rendering/Ombra/Image/: Types.hs
Graphics/Rendering/Ombra/Internal/: GL.hs  Heterogeneous.hs  Resource.hs  SM.hs  STVectorLen.hs  TList.hs
Graphics/Rendering/Ombra/Layer/: Internal.hs  Types.hs
Graphics/Rendering/Ombra/Object/: Internal.hs  Types.hs
Graphics/Rendering/Ombra/OutBuffer/: Types.hs
Graphics/Rendering/Ombra/Shader/: CPU.hs  Default2D.hs  Default3D.hs  GLSL.hs  Language.hs  Program.hs  Shader.hs  ShaderVar.hs  Stages.hs  Types.hs
Graphics/Rendering/Ombra/Shader/Language/: Functions.hs  Types.hs
Graphics/Rendering/Ombra/Stencil/: Draw.hs  Internal.hs  Types.hs
Graphics/Rendering/Ombra/Stream/: Internal.hs  Types.hs
Graphics/Rendering/Ombra/Texture/: Draw.hs  Internal.hs  Types.hs
examples/: Common.hs
examples/01_cube/: Main.hs
examples/02_persp/: Main.hs
examples/03_frag/: Main.hs  Program.hs
examples/04_uniform/: Main.hs  Program.hs
examples/05_sub/: Main.hs  Program3D.hs  ProgramCommon.hs  ProgramDistort.hs
examples/06_vert/: Main.hs  Program.hs
examples/Utils/: Input.hs  Key.hs  Lighting.hs  OBJLoader.hs  OBJParser.hs  Play.hs  Reflex.hs  Shapes.hs  Tangents.hs  TextureLoader.hs  Transform.hs  Vertex3D.hs
examples/demo/out.jsexe/: index.html  lib.js  out.stats
examples/example1/: Main.hs
examples/example1/out.jsexe/: index.html  out.js
tools/: OBJ.hs
